--- a/Css/tienda.css
+++ b/Css/tienda.css
@@ -38,6 +38,17 @@ nav a.active {
   border-radius: 4px;
 }
 
+nav a:hover{
+  background-color: #f0f0f0;
+  color: #333;
+  border-radius: 4px;
+}
+nav a.active:hover {
+  background-color: #080808;
+  color: #fff;
+  border-radius: 4px;
+}
+
 main {
   max-width: 1200px;
   margin: 0 auto;
@@ -76,7 +87,7 @@ main {
 .product span.price {
   font-size: 18px;
   font-weight: bold;
-  color: #459efd;
+  color: #4db8ff;
 }
 
 .product button {
