Modificacion index.html, sobre nosotros.html y styles.css

--- a/Css/styles.css
+++ b/Css/styles.css
@@ -37,6 +37,17 @@ body {
     background-color: #555;
     border-radius: 4px;
   }
+
+  nav a.active {
+    background-color: #555;
+    border-radius: 4px;
+  }
+  
+  nav a:hover{
+    background-color: #f0f0f0;
+    color: #333;
+    border-radius: 4px;
+  }
   
   main {
     max-width: 800px;
